[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="Popup" type="Popup"]
margin_right = 1400.0
margin_bottom = 800.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.584314, 0.584314, 0.584314, 1 )

[node name="Overarching" type="GridContainer" parent="."]
margin_left = 5.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 40

[node name="Sound" type="GridContainer" parent="Overarching"]
margin_right = 1341.0
margin_bottom = 124.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="Master" type="HBoxContainer" parent="Overarching/Sound"]
margin_right = 679.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Overarching/Sound/Master"]
margin_right = 325.0
margin_bottom = 52.0
rect_min_size = Vector2( 325, 0 )
custom_fonts/font = SubResource( 1 )
text = "Master Volume"

[node name="MasterVol" type="HSlider" parent="Overarching/Sound/Master"]
margin_left = 329.0
margin_right = 679.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
size_flags_vertical = 5
min_value = -20.0
max_value = 0.0
value = -5.0

[node name="Music" type="HBoxContainer" parent="Overarching/Sound"]
margin_left = 699.0
margin_right = 1341.0
margin_bottom = 52.0
alignment = 1

[node name="Label" type="Label" parent="Overarching/Sound/Music"]
margin_right = 288.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "Music Volume"

[node name="MusicVol" type="HSlider" parent="Overarching/Sound/Music"]
margin_left = 292.0
margin_right = 642.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
size_flags_vertical = 5
min_value = -20.0
max_value = 0.0
value = -5.0

[node name="SFX" type="HBoxContainer" parent="Overarching/Sound"]
margin_top = 72.0
margin_right = 679.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="Overarching/Sound/SFX"]
margin_right = 325.0
margin_bottom = 52.0
rect_min_size = Vector2( 325, 0 )
custom_fonts/font = SubResource( 3 )
text = "SFX Volume"

[node name="SFXVol" type="HSlider" parent="Overarching/Sound/SFX"]
margin_left = 329.0
margin_right = 679.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
size_flags_vertical = 5
min_value = -20.0
max_value = 0.0
value = -5.0

[connection signal="value_changed" from="Overarching/Sound/Master/MasterVol" to="." method="_on_MasterVol_value_changed"]
[connection signal="value_changed" from="Overarching/Sound/Music/MusicVol" to="." method="_on_MusicVol_value_changed"]
[connection signal="value_changed" from="Overarching/Sound/SFX/SFXVol" to="." method="_on_SFXVol_value_changed"]
